Weather data is displayed

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 <div class="container">
     <div class="row">
         <div class="col mx-auto text-center m-5 p-5 bg-info rounded">
-            <h1 class="text-white">City</h1>
+            <h1 class="text-white" id="w-city">City</h1>
             <ul class="list-group m-3">
-                <li class="list-group-item">Temperature</li>
-                <li class="list-group-item">Clouds</li>
+                <li class="list-group-item" id="w-temp">Temperature</li>
+                <li class="list-group-item" id="w-desc">Clouds</li>
             </ul>
             <hr>
             <button class="btn btn-secondary" data-toggle="modal" data-target="#changeCity">Change city</button>
@@ -55,6 +55,7 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 <!-- local scripts -->
 <script src="Weather.js"></script>
+<script src="UI.js"></script>
 <script src="app.js"></script>
 </body>
 </html>
